<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_notiz_loeschen"
        android:title="Notiz löschen"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_google_maps"
        android:title="Show in Google Maps"
        android:icon="@drawable/googlemaps_icon"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_projekt_bearbeiten"
        android:title="Projektname bearbeiten"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_projekt_auswaehlen"
        android:title="Projekt auswählen"
        android:icon="@android:drawable/ic_menu_set_as"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_projekt_versenden"
        android:title="Projekt versenden"
        android:icon="@android:drawable/ic_menu_send"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/title_item_no_movement"
                    android:id="@+id/item_no_movement"/>
                <item android:title="@string/title_item_foot"
                    android:id="@+id/item_foot"/>
                <item android:title="@string/title_item_bicycle"
                    android:id="@+id/item_bicycle"
                    android:checked="true"/>
                <item android:title="@string/title_item_car"
                    android:id="@+id/item_car"/>
                <item android:title="@string/title_item_car_fast"
                    android:id="@+id/item_car_fast"/>
            </group>
        </menu>
    </item>
</menu>